// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a disabled input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      disabled=""
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a full width input field 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c3 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c3[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c3:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c3::-webkit-input-placeholder {
  opacity: 0.6;
}

.c3::-moz-placeholder {
  opacity: 0.6;
}

.c3:-ms-input-placeholder {
  opacity: 0.6;
}

.c3::placeholder {
  opacity: 0.6;
}

.c3 {
  width: 100%;
}

.c0 {
  width: 100%;
}

<div
  class="c0 c1"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c2 c1"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c3 c4"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="true"
      class="c7 c8"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (after) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 > *:not(:first-child):not(:last-child),
.c6 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c6 > *:first-child,
.c6 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child,
.c6 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
    role="group"
  >
    <div
      class="c7 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        type="text"
        value=""
      />
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (before) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 > *:not(:first-child):not(:last-child),
.c6 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c6 > *:first-child,
.c6 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child,
.c6 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
    role="group"
  >
    <div>
      test
    </div>
    <div
      class="c7 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        type="text"
        value=""
      />
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for addon component (vertical) 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c8 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c8[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c8:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c8::-webkit-input-placeholder {
  opacity: 0.6;
}

.c8::-moz-placeholder {
  opacity: 0.6;
}

.c8:-ms-input-placeholder {
  opacity: 0.6;
}

.c8::placeholder {
  opacity: 0.6;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 > *:not(:first-child):not(:last-child),
.c6 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-top-width: 0;
}

.c6 > *:first-child,
.c6 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:last-child,
.c6 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c6 > * {
  border-radius: 4px;
}

.c6 input:focus,
.c6 select:focus {
  z-index: 1;
  position: relative;
}

.c6 > *:first-child input,
.c6 > *:first-child select {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c6 > *:last-child input,
.c6 > *:last-child select {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c6 > *:not(:first-child):not(:last-child) > input,
.c6 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
    role="group"
  >
    <div
      class="c7 c0"
    >
      <input
        aria-invalid="false"
        aria-required="false"
        class="c8 c9"
        id="username"
        type="text"
        value=""
      />
    </div>
    <div>
      test
    </div>
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a default value 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value="Awesome value"
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <span
    class="c6 c7 c0"
  >
    Required for your fannypack
  </span>
  <div
    class="c8 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c10 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c10 {
  font-style: italic;
}

kbd.c10 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c10 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c10 {
  font-weight: bold;
}

sub.c10,
sup.c10 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c10,
u.c10 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c10,
cite.c10,
var.c10,
em.c10 {
  font-style: italic;
}

kbd.c10,
pre.c10,
samp.c10 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c10 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c9 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
  </div>
  <div />
  <div
    class="c6 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      id="username"
      type="text"
      value=""
    />
  </div>
  <span
    class="c9 c10 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for an input field with a placeholder 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      placeholder="Awesome placeholder"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input with a after component 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-right: 2.3em;
}

.c9 .c5 {
  top: 0.15em;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <div
      class="c2 c3"
      style="right: 0px; z-index: 3;"
    >
      <svg
        class="c4 c5 c6 c0"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <title>
          Search
        </title>
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an input with a before component 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c3.c3.c3 {
  position: absolute;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c4 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-left: 2.3em;
}

.c9 .c5 {
  top: 0.15em;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <div
      class="c2 c3"
      style="z-index: 3;"
    >
      <svg
        class="c4 c5 c6 c0"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 512 512"
      >
        <title>
          Search
        </title>
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </div>
    <input
      aria-invalid="false"
      aria-required="false"
      class="c7 c8"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-bottom: 0.25rem !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c9 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c9[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c9::-webkit-input-placeholder {
  opacity: 0.6;
}

.c9::-moz-placeholder {
  opacity: 0.6;
}

.c9:-ms-input-placeholder {
  opacity: 0.6;
}

.c9::placeholder {
  opacity: 0.6;
}

.c4 {
  display: inline-block;
}

.c3 {
  display: block;
}

abbr.c7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c7 {
  font-style: italic;
}

kbd.c7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c7 {
  font-weight: bold;
}

sub.c7,
sup.c7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c7,
u.c7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c7,
cite.c7,
var.c7,
em.c7 {
  font-style: italic;
}

kbd.c7,
pre.c7,
samp.c7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c7 .c11 {
  top: 0.15em;
}

.c2 {
  margin-bottom: 0 !important;
}

.c6 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c5"
      font-weight="600"
      for="username"
      style="font-weight: 600;"
    >
      Username
    </label>
    <span
      class="c6 c7 c0"
    >
      OPTIONAL
    </span>
  </div>
  <div />
  <div
    class="c8 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c9 c10"
      id="username"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size large 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 1.5rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size medium 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 1.25rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`sizes renders correctly for an input field with size small 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c1 {
  font-size: 0.8rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #d97c82;
  box-shadow: #d97c82 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="true"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #6ba886;
  box-shadow: #6ba886 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`states renders correctly for an input field with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #f5bd4c;
  box-shadow: #f5bd4c 0px 0px 0px 1px !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="text"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type date 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="date"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type email 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="email"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type number 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="number"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type password 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="password"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type search 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="search"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type tel 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="tel"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type time 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="time"
      value=""
    />
  </div>
  <div />
</div>
`;

exports[`types renders correctly for an input field with type url 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7c81d9;
  box-shadow: #7c81d9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <div
    class="c1 c0"
  >
    <input
      aria-invalid="false"
      aria-required="false"
      class="c2 c3"
      type="url"
      value=""
    />
  </div>
  <div />
</div>
`;
